# ai-discord-bot

./: .env.example  .gitignore  CMakeLists.txt  README.md  artifact_bot.db  bot.py  build_sdk.bat  build_simple.bat  db.py  discord_sdk.cpp  discordpp.h  launcher.py  manage.ps1  ollama_client.py  requirements.txt  start_bot.bat  start_bot.py  status.py  test_bot.py
